feat: Header / Logo completed

--- a/src/App.sass
+++ b/src/App.sass
@@ -1,4 +1,6 @@
+@import ./styles/ProjectStyles
+
 .App
-  max-height: 100vh
+  min-height: 100vh
   padding: 10px
-  background-color: #818D92
+  background-color: $AppBackground-color
