--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -1,3 +1,14 @@
+@import ../../styles/ProjectStyles
+
 .header
-  background-color: #586A6A
+  display: flex
+  flex-direction: row
+  align-items: center
+  justify-content: flex-end
   width: 100%
+  height: 70px
+  padding: 10px
+  box-sizing: border-box
+  background-color: $HeaderBackground-color
+  box-shadow: 0 5px 5px 0 $BoxShadow-color
+  border-radius: 5px
