feat: added navigation logic

--- a/src/styles/ProjectStyles.sass
+++ b/src/styles/ProjectStyles.sass
@@ -1,3 +1,3 @@
 $AppBackground-color: #93A29B
-$HeaderBackground-color: #3A606E
-$BoxShadow-color: #DCBF85
+$PrimaryBackground-color: #3A606E
+$PrimaryBoxShadow: 0 5px 5px 0 #DCBF85
