--- a/src/App.sass
+++ b/src/App.sass
@@ -1,6 +1,10 @@
 @import ./styles/ProjectStyles
 
 .App
+  display: flex
+  flex-direction: column
+  justify-content: flex-start
+  align-items: center
   min-height: 100vh
   padding: 10px
   background-color: $AppBackground-color
