--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -7,8 +7,9 @@
   justify-content: flex-end
   width: 100%
   height: 70px
+  margin-bottom: 20px
   padding: 10px
   box-sizing: border-box
-  background-color: $HeaderBackground-color
-  box-shadow: 0 5px 5px 0 $BoxShadow-color
+  background-color: $PrimaryBackground-color
+  box-shadow: $PrimaryBoxShadow
   border-radius: 5px
